# EEG_lsl_unity_test

./: .gitignore  CMakeLists.txt
apps/unity_marker_gui/: CMakeLists.txt  log_buffer.hpp  lsl_reader.cpp  lsl_reader.hpp  main.cpp
